# jat2167_mds_final

./: CONTRIBUTING.rst  LICENSE  README.md  pyproject.toml
docs/: Makefile  index.rst  usage.rst
docs_jat2167/: conf.py  installation.rst  make.bat
docs_jat2167/_build/doctrees/: conduct.doctree  contributing.doctree  environment.pickle  index.doctree  installation.doctree  usage.doctree
docs_jat2167/_build/doctrees/source/: jat2167_final_mds.doctree  modules.doctree
docs_jat2167/_build/html/: .buildinfo  conduct.html  contributing.html  genindex.html  index.html  installation.html  objects.inv  search.html  searchindex.js  usage.html
docs_jat2167/_build/html/_sources/source/: jat2167_final_mds.rst.txt
docs_jat2167/_build/html/source/: jat2167_final_mds.html  modules.html
docs_jat2167/source/: modules.rst
jat2167_final_mds/: __init__.py  jat2167_final_mds.py
tests/: test_jat2167_final_mds.py
