[tool.poetry]
name = "jat2167_music"
version = "0.1.0"
description = "Final Project for QMSS - Modern Data Structures, an API client which receives information from a popular music website and sends the user email updates."
authors = ["Julia Tache <jat2167@columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.9.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pytest-cov = "^2.10.1"
codecov = "^2.1.11"
python-semantic-release = "^7.8.1"
flake8 = "^3.8.4"
sphinx = "^3.3.1"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
